Adding file to test Canny edge detection

--- a/src/CannyEdgeDetector/CMakeLists.txt
+++ b/src/CannyEdgeDetector/CMakeLists.txt
@@ -1,5 +1,11 @@
+find_package(OpenCV REQUIRED)
 add_library(CannyEdgeDetector "")
 include_directories("../../include/CannyEdgeDetector")
 target_sources(CannyEdgeDetector PRIVATE
                "CannyEdgeDetector.cpp"
                "../../include/CannyEdgeDetector/CannyEdgeDetector.h")
+add_executable(CannyEdgeDetectorTest
+               CannyEdgeDetectorTest.cpp)
+target_link_libraries(CannyEdgeDetectorTest
+                      CannyEdgeDetector
+                      ${OpenCV_LIBS})
