--- a/src/Camera/CMakeLists.txt
+++ b/src/Camera/CMakeLists.txt
@@ -1,5 +1,5 @@
+find_package(OpenCV REQUIRED)
 include_directories("../../include/Camera")
-
 add_library(Camera "")
 target_sources(Camera PRIVATE
                "Camera.cpp"
@@ -10,3 +10,12 @@ add_library(IPCam "")
 target_sources(IPCam PRIVATE
                "IPCam.cpp"
                "../../include/Camera/IPCam.h")
+target_link_libraries(IPCam
+                      Camera)
+
+               
+add_executable(IPCamTest
+               IPCamTest.cpp)
+target_link_libraries(IPCamTest
+                      IPCam
+                      ${OpenCV_LIBS})
