Began working on a new object that will scan local webcams and register them with the application

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory("CannyEdgeDetector")
 add_subdirectory("Camera")
 add_subdirectory("HOG")
 add_subdirectory("SVMTrainer")
+add_subdirectory("LocalCameras")
