--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,4 @@ add_subdirectory("CannyEdgeDetector")
 add_subdirectory("Camera")
 add_subdirectory("HOG")
 add_subdirectory("SVMTrainer")
-add_subdirectory("LocalCameras")
+add_subdirectory("LocalCameraManager")
