--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory("Camera")
 add_subdirectory("HOG")
 add_subdirectory("SVMTrainer")
 add_subdirectory("LocalCameraManager")
+add_subdirectory("WebcamCanny")
