Updated CannyEdgeDetector to make it more general and more OOP-like

--- a/src/LocalCameraManager/CMakeLists.txt
+++ b/src/LocalCameraManager/CMakeLists.txt
@@ -4,12 +4,11 @@ include_directories("../../include/LocalCameraManager"
 add_library(LocalCameraManager "")
 target_sources(LocalCameraManager PRIVATE
                "LocalCameraManager.cpp"
-               "../../include/LocalCameraManager/LocalCameraManager.h"
-               "../Camera/Webcam.cpp"
-               "../../include/Camera/Webcam.h")
+               "../../include/LocalCameraManager/LocalCameraManager.h")
 
 add_executable(LocalCameraManagerTest
                LocalCameraManagerTest.cpp)
 target_link_libraries(LocalCameraManagerTest
                       LocalCameraManager
+                      Webcam
                       ${OpenCV_LIBS})
