--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,4 +3,5 @@ add_subdirectory("Camera")
 add_subdirectory("HOG")
 add_subdirectory("SVMTrainer")
 add_subdirectory("LocalCameraManager")
+add_subdirectory("IPCamManager")
 add_subdirectory("WebcamCanny")
