--- a/src/IPCamManager/CMakeLists.txt
+++ b/src/IPCamManager/CMakeLists.txt
@@ -5,3 +5,10 @@ add_library(IPCamManager "")
 target_sources(IPCamManager PRIVATE
                "IPCamManager.cpp"
                "../../include/IPCamManager/IPCamManager.h")
+
+add_executable(IPCamManagerTest
+               IPCamManagerTest.cpp)
+target_link_libraries(IPCamManagerTest
+                      IPCamManager
+                      IPCam
+                      ${OpenCV_LIBS})
