Added skeleton for SeamCarver

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory("SVMTrainer")
 add_subdirectory("LocalCameraManager")
 add_subdirectory("IPCamManager")
 add_subdirectory("WebcamCanny")
+add_subdirectory("SeamCarver")
