Adding a backdoor class to access underlying container class in priority_queue in order to preallocate/reserve memory.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory("LocalCameraManager")
 add_subdirectory("IPCamManager")
 add_subdirectory("WebcamCanny")
 add_subdirectory("SeamCarver")
+add_subdirectory("ResizablePriorityQueue")
