Implemented a min-oriented priority heap to improve performance of seam carving which currently uses STL priority_queue

--- a/src/ResizablePriorityQueue/CMakeLists.txt
+++ b/src/ResizablePriorityQueue/CMakeLists.txt
@@ -2,4 +2,6 @@ include_directories("../../include/ResizablePriorityQueue")
 
 add_executable(ResizablePriorityQueueTest
                ResizablePriorityQueueTest.cpp
-               "../../include/ResizablePriorityQueue/ResizablePriorityQueue.h")
+               "../../include/ResizablePriorityQueue/ResizablePriorityQueue.h"
+               "../../include/ResizablePriorityQueue/ConstSizeBinaryHeap.h"
+               "../../include/ResizablePriorityQueue/ConstSizeMinBinaryHeap.h")
