Integrated min-oriented priority queue into SeamCarving algorithm

--- a/src/SeamCarver/CMakeLists.txt
+++ b/src/SeamCarver/CMakeLists.txt
@@ -1,9 +1,11 @@
 find_package(OpenCV REQUIRED)
-include_directories("../../include/SeamCarver")
+include_directories("../../include/SeamCarver"
+                    "../../include/ResizablePriorityQueue")
 add_library(SeamCarver "")
 target_sources(SeamCarver PRIVATE
                "SeamCarver.cpp"
-               "../../include/SeamCarver/SeamCarver.h")
+               "../../include/SeamCarver/SeamCarver.h"
+               "../../include/ResizablePriorityQueue/ConstSizeMinBinaryHeap.h")
 
 add_executable(SeamCarverTest
                SeamCarverTest.cpp)
