Changing Min Oriented Priority Queue and adding googletest tests

--- a/src/ResizablePriorityQueue/CMakeLists.txt
+++ b/src/ResizablePriorityQueue/CMakeLists.txt
@@ -4,3 +4,5 @@ add_executable(ResizablePriorityQueueTest
                ResizablePriorityQueueTest.cpp
                "../../include/ResizablePriorityQueue/ResizablePriorityQueue.h"
                "../../include/ResizablePriorityQueue/ConstSizeMinBinaryHeap.h")
+target_link_libraries(ResizablePriorityQueueTest
+                      gtest_main)
