Code refactoring. Exception is throw sometime after computing energy.

--- a/src/SeamCarver/CMakeLists.txt
+++ b/src/SeamCarver/CMakeLists.txt
@@ -33,4 +33,5 @@ target_link_libraries(SeamCarverTest
                       SeamCarver
                       SeamCarverKeepout
                       ${OpenCV_LIBS}
-                      gtest_main)
+                      gtest_main
+                      PixelEnergy2D)
